src/components/InventoryList/InventoryList.scss
@use "../../styles/partials/breakpoints" as *;
@use "../../styles/partials/typography" as *;
@use "../../styles/partials/variables" as *;

.inventory {
  color: $instock-black;
  background-color: $white;

  &__container {
    padding: 2rem 1.5rem 1.5rem 1.5rem;

    @include tablet {
      display: flex;
      justify-content: space-between;
      align-items: center;
    }
  }

  &__sub-container {
    @include tablet {
      display: flex;
      align-items: center;
    }
  }

  &__div--ghost {
   
  }

  &__div-info--qty {
    @include tablet {
      display: none;
    }
  }

  &__div-info--ghost {
    display: none;

    @include tablet {
      display: inline-block;
    }
  }

  &__title {
    @include page-header-mobile();
  }

  &__search-container {
    display: flex;
    justify-content: center;
  }

  &__list-titles {
    display: none;

    @include tablet {
      @include table-header-mobile();
      padding: 0.5rem 1.5rem 0.5rem 1.5rem;
      display: flex;
      justify-content: space-between;
      align-items: center;
      background-color: $light-grey;
    }
  }

  &__card {
    padding: 1rem 1.5rem;
    border-top: 1px solid $cloud;

    @include tablet {
      display: flex;
      justify-content: space-between;
    }

    &-info {
      display: flex;
      justify-content: space-between;
    }
  }

  &__div {
    width: 50%;
    padding-bottom: 1rem;
    @include body-medium-mobile;

    @include tablet {
      width: 5.5rem;
    }

    &-container {
      display: flex;
      align-items: center;
    }

    &-title {
      @include body-small-mobile;
      font-weight: 600;
      color: $slate;
      padding-bottom: 0.3rem;

      @include tablet {
        display: none;
      }

      &-info {
        @include tablet {
          padding-bottom: 0;
        }
      }
    }

    &-info--outstock-container {
      @include body-small-mobile();
      color: $red;
      border: 1px;
      border-radius: 20px;
      background: rgba(201, 69, 21, 0.07);
      width: 5rem;
      padding-top: 0.2rem;
      padding-bottom: 0.2rem;
      font-weight: 600;
      text-align: center;

      @include tablet {
        padding-bottom: 0;
       
      }
    }

    &-info--instock-container {
      @include body-small-mobile();
      color: $green;
      border: 1px;
      border-radius: 20px;
      background: rgba(21, 132, 99, 0.07);
      width: 3.5rem;
      padding-top: 0.2rem;
      padding-bottom: 0.2rem;
      font-weight: 600;
      text-align: center;

      @include tablet {
        padding-bottom: 0;
        
      }
    }
  }

  &__link {
    text-decoration: none;
  }

  &__buttons {
    display: flex;
    justify-content: space-between;
  }

  &__button-sub-container {
    width: 100%;
    height: 36px;
    display: flex;
    align-items: center;

    @include tablet {
    }
  }

  &__button {
    @include labels-mobile();
    color: $white;
  }

  &__button-link {
    @include tablet {
    }
  }

  &__button-container {
    border-radius: 20px;
    display: flex;
    justify-content: center;
    background-color: $instock-indigo;

    @include tablet {
      align-items: center;
      height: 2rem;
      margin-left: 1rem;
      width: 8rem;
    }
  }

  &__delete-button {
    border: none;
    background-color: $white;
    :hover{
      cursor: pointer;
    }
  }

  &__search {
    width: 100%;
    margin: 1rem 0;

    &-bar {
      width: 100%;
      height: 36px;
      border-radius: 20px;
      border: 1px solid $cloud;
      background-image: url("../../assets/images/Icons/search-24px.svg");
      background-repeat: no-repeat;
      background-position: center right 5%;

      @include tablet {
        width: 12rem;
      }

      &::placeholder {
        @include labels-mobile();
        position: relative;
        left: 1rem;
        color: $slate;
      }
    }
  }
}

